--- a/web/templates/common/layout_user.html
+++ b/web/templates/common/layout_user.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>管理页面</title>
+    <title>管理后台</title>
     <link rel="stylesheet" href="{{ buildStaticUrl('/css/bootstrap.min.css') }}">
-    {% block css %}{% endblock %}
+    {% block css %} {% endblock %}
 </head>
 <body>
-    {% block content %}{% endblock %}
-    
-    <script src="{{ buildStaticUrl('/plugins/jquery-3.5.0.min.js') }}"></script>
-    {% block js %}{% endblock %}
+    {% block content %} {% endblock %}
+
+
+<script src="{{ buildStaticUrl('/plugins/jquery-3.5.0.min.js') }}"></script>
+{% block js %}{% endblock %}
 </body>
 </html>
