--- a/web/templates/common/layout_main.html
+++ b/web/templates/common/layout_main.html
@@ -19,12 +19,12 @@
                     <li class="nav-header">
                         <div class="profile-element text-center">
                             <img alt="image" width="30px" class="img-circle"
-                                src="{{ buildStaticUrl('/images/common/avatar.png') }}" />
-                            <p class="text-muted">Bruce</p>
+                                src="{{ buildStaticUrl('/images/common/1.jpg') }}" />
+                            <p class="text-muted">{{ current_user.nickname }}</p>
                         </div>
                         <div class="logo-element">
                             <img alt="image" width="30px" class="img-circle"
-                                src="{{ buildStaticUrl('/images/common/avatar.png') }}" />
+                                src="{{ buildStaticUrl('/images/common/1.jpg') }}" />
                         </div>
                     </li>
                     <li class="default">
@@ -72,7 +72,7 @@
                         <li class="dropdown user_info">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);">
                                 <img alt="image" class="img-circle"
-                                    src="{{ buildStaticUrl('/images/common/avatar.png') }}" />
+                                    src="{{ buildStaticUrl('/images/common/1.jpg') }}" />
                             </a>
                             <ul class="dropdown-menu dropdown-messages">
                                 <li>
